--- a/main.css
+++ b/main.css
@@ -31,3 +31,7 @@
     background: #007AFF;
     cursor: pointer;
 }
+.upper-canvas, #canvas, .canvas-container {
+ width:60vh !important;
+ height:50vh !important;
+}
