--- a/main.css
+++ b/main.css
@@ -32,6 +32,6 @@
     cursor: pointer;
 }
 .upper-canvas, #canvas, .canvas-container {
- width:30vh !important;
- height:50vh !important;
+ width:70% !important;
+ height:60vh !important;
 }
